--- a/ToDo
+++ b/ToDo
@@ -15,6 +15,8 @@
 
 3- Additional: when the button "List most expensive items" is clicked more than once it should not show the items many times.
 
+4- Additional: Write README file for this repo.
+
 Note: 
  - Any Additional features might be done after we finish all the project. 
  - Please refer to Marwan's project https://www.youtube.com/watch?v=hLpzrXDzxZ0
