--- a/ToDo
+++ b/ToDo
@@ -28,6 +28,7 @@
 Note: 
  - Any Additional features might be done after we finish all the project. 
  - Flammarion repo: https://github.com/zach-capalbo/flammarion
- - Please refer to Marwan's project: https://www.youtube.com/watch?v=hLpzrXDzxZ0
+ - Please refer to Marwan's video: https://www.youtube.com/watch?v=hLpzrXDzxZ0
+ - Marwan's BookStore repo: https://github.com/MarwanTukhta/OOP-Ruby-BookStore
 
 
