--- a/ToDo
+++ b/ToDo
@@ -13,9 +13,9 @@
   2.1- When the button "List of all items" is clicked all the new added items should be shown, and all the deleted items should not be listed. 
   2.3- Additional: When the button "List of all items" is clicked more than once it should not show the items many times.
 
-3- List books within certain range.
+3- List books within certain range - (Dina - in progress).
 
-4- Search magazine by date.
+4- Search magazine by date - (Dina - in progresss).
 
 5- Search magazine by publisher.
 
@@ -25,7 +25,7 @@
 
 8- Additional: Write README file for this repo.
 
-Note: 
+Notes: 
  - Any Additional features might be done after we finish all the project. 
  - Flammarion repo: https://github.com/zach-capalbo/flammarion
  - Please refer to Marwan's video: https://www.youtube.com/watch?v=hLpzrXDzxZ0
