--- a/ToDo
+++ b/ToDo
@@ -19,9 +19,9 @@
 
 4- Search magazine by date - (Dina - in progresss).
 
-5- Search magazine by publisher.
+5- Search magazine by publisher - (Amir - in progress)
 
-6- Delete an item. (Abdelrhman)
+6- Delete an item. 
 
 7- Additional: when the button "List most expensive items" is clicked more than once it should not show the items many times.
 
