--- a/ToDo
+++ b/ToDo
@@ -19,7 +19,7 @@
 
 4- Search magazine by date - (Dina - in progresss).
 
-5- Search magazine by publisher - (Amir - in progress)
+5- Search magazine by publisher. (Amir - in progress).
 
 6- Delete an item. 
 
@@ -28,8 +28,6 @@
 8- Additional: Write README file for this repo.
 
 Notes: 
- - To Open new window: any_window_name = Flammarion::Engraving.new, please remember to add: any_window_name.wait_until_closed
- - The code of drop down menu: f.dropdown([1,2,3]){|h_msg| p h_msg['text']}
  - Any Additional features might be done after we finish all the project. 
  - Flammarion repo: https://github.com/zach-capalbo/flammarion
  - Please refer to Marwan's video: https://www.youtube.com/watch?v=hLpzrXDzxZ0
