--- a/ToDo
+++ b/ToDo
@@ -17,7 +17,7 @@
 
 3- List books within certain range - (Dina - in progress).
 
-4- Search magazine by date - (Dina - in progresss).
+4- Search magazine by date - (Dina - Done).
 
 5- Search magazine by publisher. (Amir - in progress).
 
