--- a/ToDo
+++ b/ToDo
@@ -19,7 +19,7 @@
 
 4- Search magazine by date - (Dina - Done).
 
-5- Search magazine by publisher. (Amir - Done).
+5- Search magazine by publisher - (Amir - Done).
 
 6- Delete an item. 
 
