--- a/ToDo
+++ b/ToDo
@@ -15,7 +15,7 @@
   2.1- When the button "List of all items" is clicked all the new added items should be shown, and all the deleted items should not be listed. 
   2.3- Additional: When the button "List of all items" is clicked more than once it should not show the items many times.
 
-3- List books within certain range - (Dina - in progress).
+3- List books within certain range - (Dina - Done).
 
 4- Search magazine by date - (Dina - Done).
 
