--- a/ToDo
+++ b/ToDo
@@ -21,7 +21,7 @@
 
 5- Search magazine by publisher - (Amir - Done).
 
-6- Delete an item - (Dina - in progress)
+6- Delete an item - (Amir - in progress)
 
 7- Additional: when the button "List most expensive items" is clicked more than once it should not show the items many times.
 
